# lin_alg

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: gf2_matrix.rs  lib.rs  matrix.rs
